--- a/a.css
+++ b/a.css
@@ -1,3 +1,47 @@
+.loading{
+    width:200px;
+    height:200px;
+    position: relative;
+}
+.loading::before,.loading::after{
+    content:'';
+    position: absolute;
+    width: 0px;
+    height:0px;
+    background: #000;
+    border-radius: 50%;
+    top: 0;
+    left: 0;
+    right:0;
+    bottom:0;
+    margin: auto;
+    animation: s 2s linear infinite;
+}
+.loading::after{
+    animation-delay: 0.7s;
+}
+@keyframes s{
+    0%{
+        width:0px;height:0px; opacity: 1;
+    }
+    100%{
+        width:100px;height:100px; opacity: 0;
+    }
+}
+.site-welcome{
+    display: none;
+    position: fixed;
+    top: 0; left: 0; width: 100%; height:100%; 
+    background: #888;
+    z-index:1px;
+    justify-content: center;
+    align-items: center;
+}
+
+.site-welcome.active{
+    display: flex;
+}
+
 body {
     background-color: #EFEFEF;
     margin: 0;
@@ -29,6 +73,11 @@ position:fixed;
 top:o;
 left:o;
 width: 100%;
+transition: all 0.5s;color:#B7B7B7;
+}
+.topnavbar.sticky{
+    background: white;padding: 10px 0px; z-index: 1;
+    box-shadow: 0 0 10px rgba(0,0,0,0.25);color:#3d4451;
 }
 .topnavbar-inner{
     padding: 0px 16px;
@@ -47,7 +96,7 @@ margin-left: 17px;
 }
 .topnavbar  nav > ul > li > a{
     font-size: 12px;
-    color: #B7B7B7;
+    color: inherit;
     text-decoration: none;
     font-weight: bold;
     border-TOP: 3px solid transparent;
@@ -212,47 +261,4 @@ section.skills .progressBar> .progress{
     background: #E6686A;
     width: 70%;
     border-radius:10px;
-}
-
-.loading{
-    width:200px;
-    height:200px;
-    border: 1px solid red;
-    position: relative;
-}
-.loading::before,.loading::after{
-    content:'';
-    position: absolute;
-    width: 0px;
-    height:0px;
-    background: #000;
-    border-radius: 50%;
-    top: 0;
-    left: 0;
-    right:0;
-    bottom:0;
-    margin: auto;
-    animation: s 2s linear infinite;
-}
-.loading::after{
-    animation-delay: 0.7s;
-}
-@keyframes s{
-    0%{
-        width:0px;height:0px; opacity: 1;
-    }
-    100%{
-        width:100px;height:100px; opacity: 0;
-    }
-}
-.site-welcome{
-    display: none;
-    position: fixed;
-    top: 0; left: 0; width: 100%; height:100%; 
-    background: #000;
-    z-index:1px;
-}
-
-.site-welcome.active{
-    display: block;
 }
