--- a/a.css
+++ b/a.css
@@ -134,7 +134,7 @@ position: relative;
     top: 100%;
     background: white;
     color:#3d4451;
-    box-shadow: 0 0 5px rgba(0,0,0,0.5));
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
    }
 .topnavbar li.active> .submenu{
     display: block;
