--- a/a.css
+++ b/a.css
@@ -282,20 +282,23 @@ body > main .download-wrapper{
     font-family: kai;
     font-size: 18px;
 }
-section.skills{
+section.skills,
+section.portfolio{
     max-width: 940px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 60px;
 
     }
-section.skills > h2{
+section.skills > h2,
+section.portfolio > h2{
         text-align: center;
         color: #3d4451;
         font-size: 34px;
         line-height: 1.2;
         font-weight: 600;
 }
+
 section.skills h3{
     font-size: 14px;
     line-height: 1.1;
@@ -304,6 +307,7 @@ section.skills h3{
 section.skills > ol{
     box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.2);
     padding: 42px 50px 10px;
+    margin-top: 10px;
 }
 section.skills > ol >li{
     float: left;
@@ -324,3 +328,65 @@ section.skills .progressBar> .progress{
     width: 70%;
     border-radius:10px;
 }
+section.portfolio{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+section.portfolio > nav >ol{
+    display: inline-block;
+    vertical-align: top;
+    align-content: center;
+}
+section.portfolio > nav > ol > li{
+    float: left;
+    margin: 0 40px;
+    cursor: pointer;
+}
+section.portfolio > nav > ol > li:first-child{
+    margin-left: 0;
+}
+section.portfolio > nav > ol > li:nth-child(3){
+    margin-right: 0;
+}
+section.portfolio > nav{
+    text-align: center;
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 32px;
+}
+
+section.portfolio > nav .bar{
+    height: 5px;
+    background: white;
+    margin-top: 5px;
+    margin-bottom: 28px;
+    border-radius: 2px;
+}
+section.portfolio > nav .bar-inner{
+    height: 100%;
+    background: #E6686A;
+    border-radius: 2px;
+    transition: all 0.3s;
+}
+section.portfolio > nav .bar.state-1 .bar-inner{
+    margin-left: 0;
+    width :42px;
+}
+section.portfolio > nav .bar.state-2 .bar-inner{
+    margin-left: 115px;
+    width :45px;
+}
+section.portfolio > nav .bar.state-3 .bar-inner{
+    margin-left: 235px;
+    width: 90px;
+}
+section.portfolio .works{
+    position: relative;
+}
+section.portfolio .works > .big,
+section.portfolio .works > .small{
+    position: absolute;
+    margin-right: 0px;
+}
+
