--- a/a.css
+++ b/a.css
@@ -1,25 +1,3 @@
-.loading{
-    width:200px;
-    height:200px;
-    position: relative;
-}
-.loading::before,.loading::after{
-    content:'';
-    position: absolute;
-    width: 0px;
-    height:0px;
-    background: #000;
-    border-radius: 50%;
-    top: 0;
-    left: 0;
-    right:0;
-    bottom:0;
-    margin: auto;
-    animation: s 2s linear infinite;
-}
-.loading::after{
-    animation-delay: 0.7s;
-}
 @keyframes s{
     0%{
         width:0px;height:0px; opacity: 1;
@@ -71,6 +49,21 @@ ul,ol{
 [data-x].active{
     outline: 10px solid red;
 }
+[data-x].offset{
+    transform: translateY(100px);
+  }
+[data-x]{
+    transform: translateY(0);
+    transition: all 0.5s;
+}
+@keyframes slideUp{
+    0%{
+      transform: translateY(-30px);
+    }
+    100%{
+      transform: translateY(0);
+    }
+}
 .topnavbar{
 padding:20px 0;
 position:fixed;
@@ -111,7 +104,8 @@ position: relative;
     display:block ;
     position: relative;
 }
-.topnavbar  nav > ul > li.active > a::after {
+.topnavbar  nav > ul > li.active > a::after,
+.topnavbar  nav > ul > li.highlight > a::after {
     content:'';
     display: block;
     position: absolute;
@@ -324,12 +318,17 @@ section.skills .progressBar{
     height: 5px;
     background: #FAE1E1;
     margin: 4px 0 40px;
-    }
+    overflow: hidden;
+}
 section.skills .progressBar> .progress{
     height: 100%;
     background: #E6686A;
     width: 70%;
     border-radius:10px;
+    transform: translateX(0);transition: all 1s;
+}
+section.skills.offset .progress{
+    transform: translateX(-100%);
 }
 section.portfolio{
     text-align: center;
